[gd_scene load_steps=6 format=3 uid="uid://cqxcsefprpluj"]

[ext_resource type="Theme" uid="uid://c6108lc3jg2cv" path="res://assets/ui/GeneralTheme.tres" id="1_xlkyc"]
[ext_resource type="Script" path="res://game/level/TutorialDisplay.gd" id="2_irhp8"]
[ext_resource type="StyleBox" uid="uid://dme1286tgr172" path="res://assets/ui/TutorialPanelDark.tres" id="3_1ywdi"]
[ext_resource type="Texture2D" uid="uid://4x2d32qjcwi1" path="res://assets/images/ui/tutorial/info.png" id="3_s7fl0"]
[ext_resource type="PackedScene" uid="uid://8wk0fsy5tc5" path="res://database/tutorials/TogetherSeparate.tscn" id="4_5facx"]

[node name="TutorialDisplay" type="MarginContainer"]
theme = ExtResource("1_xlkyc")
script = ExtResource("2_irhp8")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
theme_override_constants/h_separation = -85
theme_override_constants/v_separation = 40
columns = 2

[node name="Title" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 44
text = "TUTORIAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="GridContainer"]
layout_mode = 2
focus_mode = 0
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Back" type="Button" parent="GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 100
text = "<"

[node name="PanelContainer" type="PanelContainer" parent="GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("3_1ywdi")

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="HSplitContainer" type="HBoxContainer" parent="GridContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="GridContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
modulate = Color(0.85098, 1, 0.886275, 1)
layout_mode = 2
texture = ExtResource("3_s7fl0")
expand_mode = 2

[node name="Spacer" type="Control" parent="GridContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TutorialCenterContainer" type="CenterContainer" parent="GridContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TogetherSeparate" parent="GridContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TutorialCenterContainer" instance=ExtResource("4_5facx")]
layout_mode = 2

[node name="Forward" type="Button" parent="GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 100
text = ">
"

[connection signal="pressed" from="GridContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="GridContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="GridContainer/HBoxContainer/Forward" to="." method="_on_forward_pressed"]
